# mini-anchor

./: Cargo.toml
.github/workflows/: ci.yaml
mini-anchor-macro/: Cargo.toml
mini-anchor-macro/src/: account.rs  accounts.rs  declare_id.rs  lib.rs
src/: lib.rs  traits.rs
src/accounts/: account.rs  mod.rs  program.rs  signer.rs
src/types/: mod.rs  option.rs  primitives.rs  pubkey.rs  string.rs  vec.rs
tests/: account_derive.rs  account_macro.rs  serde.rs  space_calculation.rs
