[package]
name = "mini-anchor-macro"
version = "0.2.0"
edition = "2021"
description = "Procedural macros for the mini-anchor framework"
license = "MIT"
repository = "https://github.com/rifuki/mini-anchor"
keywords = ["solana", "anchor", "macro", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
bs58 = "0.5.1"
proc-macro2 = "1.0.105"
quote = "1.0.43"
sha2 = "0.10.9"
syn = { version = "2.0.114", features = ["full"] }
